--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://thepristineproject.com/"
 languageCode = "en-us"
-title = "The Pristine Project"
+title = "The Pristine Pro*ject"
 theme = "onedly"
 
 #
