--- a/config.toml
+++ b/config.toml
@@ -9,15 +9,15 @@ theme = "onedly"
 [params]
     # project specific params
     description = "Express your Self, effortlessly."
-    author_url = "//cdeck3r.com"
-    author_name = "cdeck3r"
-    project_url = "//github.com/cdeck3r/OneDly-Theme"
+    author_url = "//jongiordano.com"
+    author_name = "Jon Giordano"
+    project_url = "https://thepristineproject.com"
 
     # optionally specify where the content is
     # mainSections = ["post"]
 
     # social share links to appear at the end
-    socialShare          = true
+    socialShare          = false
     # Sets specific share to appear on posts (default behavior is to appear)
     socialShareTwitter   = true
     socialShareGoogleplus = true
@@ -81,7 +81,7 @@ theme = "onedly"
     qq             = "" # User ID Number
     instagram        = ""
     tumblr           = ""
-    twitter          = "cdeck3r"
+    twitter          = ""
     skype            = ""
     snapchat         = ""
     pinterest        = ""
@@ -91,7 +91,7 @@ theme = "onedly"
     orcid            = ""
     researchgate     = ""
     # Email
-    email = "info@cdeck3r.com"
+    email = "jon@beyondperformance.us"
 
 #
 # Adjust privacy settings
