--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ theme = "onedly"
 #
 [social]
     # Coding Communities
-    github           = "cdeck3r/OneDly-Theme"
+    github           = ""
     gitlab           = ""
     stackoverflow    = "" # User Number
     bitbucket        = ""
@@ -63,7 +63,7 @@ theme = "onedly"
     wordpress        = ""
     medium           = ""
     # Professional/Business Oriented Communities
-    linkedin         = ""
+    linkedin         = "https://www.linkedin.com/in/jongiordano/"
     linkedin_company = ""
     foursquare       = ""
     xing             = ""
@@ -73,7 +73,7 @@ theme = "onedly"
     googleplus       = ""
     reddit           = ""
     quora            = ""
-    youtube          = "channel/UCZ5wNVV_E6AA3L3C-mvqwSA"
+    youtube          = "https://www.youtube.com/channel/UC_ba9vpfqIXFvK-i4ZtPf-Q"
     vimeo            = ""
     whatsapp         = "" # WhatsApp Number
     # WeChat and QQ need testing.
@@ -81,7 +81,7 @@ theme = "onedly"
     qq             = "" # User ID Number
     instagram        = ""
     tumblr           = ""
-    twitter          = ""
+    twitter          = "https://twitter.com/jongiordano123"
     skype            = ""
     snapchat         = ""
     pinterest        = ""
