Update config urls

--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ theme = "onedly"
     wordpress        = ""
     medium           = ""
     # Professional/Business Oriented Communities
-    linkedin         = "https://www.linkedin.com/in/jongiordano/"
+    linkedin         = "/jongiordano/"
     linkedin_company = ""
     foursquare       = ""
     xing             = ""
@@ -73,7 +73,7 @@ theme = "onedly"
     googleplus       = ""
     reddit           = ""
     quora            = ""
-    youtube          = "https://www.youtube.com/channel/UC_ba9vpfqIXFvK-i4ZtPf-Q"
+    youtube          = "/UC_ba9vpfqIXFvK-i4ZtPf-Q"
     vimeo            = ""
     whatsapp         = "" # WhatsApp Number
     # WeChat and QQ need testing.
@@ -81,7 +81,7 @@ theme = "onedly"
     qq             = "" # User ID Number
     instagram        = ""
     tumblr           = ""
-    twitter          = "https://twitter.com/jongiordano123"
+    twitter          = "/jongiordano123"
     skype            = ""
     snapchat         = ""
     pinterest        = ""
