--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,8 @@ theme = "onedly"
 [params]
     # project specific params
     description = "Express your Self, effortlessly."
-    author_url = "//"
-    author_name = "Jon Giordano"
+    author_url = "//thepristineproject.com"
+    author_name = "with Jon Giordano"
     # project_url = "https://thepristineproject.com"
 
     # optionally specify where the content is
